--- a/estilos.css
+++ b/estilos.css
@@ -10,6 +10,17 @@ body {
 p {
   text-align: justify;
 }
+p {
+  white-space: nowrap;
+  height: 1em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+p.expandido {
+  white-space: normal;
+  height: auto;
+}
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0.25em;
